--- a/src/content/docs/ja/core-concepts/framework-components.mdx
+++ b/src/content/docs/ja/core-concepts/framework-components.mdx
@@ -110,7 +110,7 @@ import Counter from '../components/Counter.svelte';
 </div>
 ```
 
-:::caution[passing functions as props]
+:::caution[関数をプロパティとして渡す]
 フレームワークコンポーネントに関数をプロパティとして渡すことはできますが、それはサーバーレンダリングの間だけ機能します。もしこの関数をハイドレードされたコンポーネント（例えば、イベントハンドラーとして）で使用しようとするとエラーが発生します。
 
 これはAstroでは関数をシリアライズ（サーバーからクライアントへの転送）できないためです。
