--- a/src/content/docs/ja/core-concepts/framework-components.mdx
+++ b/src/content/docs/ja/core-concepts/framework-components.mdx
@@ -111,7 +111,7 @@ import Counter from '../components/Counter.svelte';
 ```
 
 :::caution[関数をプロパティとして渡す]
-フレームワークコンポーネントに関数をプロパティとして渡すことはできますが、それはサーバーレンダリングの間だけ機能します。もしこの関数をハイドレードされたコンポーネント（例えば、イベントハンドラーとして）で使用しようとするとエラーが発生します。
+フレームワークコンポーネントに関数をプロパティとして渡せますが、それはサーバーレンダリングの間だけ機能します。もしこの関数をハイドレードされたコンポーネント（例えば、イベントハンドラーとして）で使用しようとするとエラーが発生します。
 
 これはAstroでは関数をシリアライズ（サーバーからクライアントへの転送）できないためです。
 :::
