--- a/src/content/docs/ja/core-concepts/framework-components.mdx
+++ b/src/content/docs/ja/core-concepts/framework-components.mdx
@@ -97,7 +97,7 @@ import MyVueComponent from '../components/MyVueComponent.vue';
 
 ## フレームワークコンポーネントにPropsを渡す
 
-Astroコンポーネントからフレームワークコンポーネントにpropを渡すことができます。
+Astroコンポーネントからフレームワークコンポーネントにpropを渡せます。
 
 ```astro title="src/pages/frameworks-props.astro"
 ---
