--- a/src/content/docs/zh-cn/install/manual.mdx
+++ b/src/content/docs/zh-cn/install/manual.mdx
@@ -181,7 +181,7 @@ TypeScript 使用`tsconfig.json`进行配置。即使你不编写 TypeScript 代
     - index.astro
   - env.d.ts
 - astro.config.mjs
-- package-lock.json or `yarn.lock`, `pnpm-lock.yaml`, etc.
+- package-lock.json 或者 `yarn.lock`，`pnpm-lock.yaml`，等等。
 - package.json
 - tsconfig.json
 </FileTree>
