i18n(zh-cn): Update install guide (#2665)
* i18n(zh-cn): Update install guide

* update

* Update src/content/docs/zh-cn/install/manual.mdx

---------

Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/zh-cn/install/auto.mdx
+++ b/src/content/docs/zh-cn/install/auto.mdx
@@ -2,9 +2,13 @@
 title: 通过自动命令行来安装 Astro
 description: 如何通过 create-astro 命令行工具使用 NPM、PNPM 或 Yarn 安装 Astro。
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-准备好安装 Astro 了吗？跟着我们的自动化或手动设置教程来开始吧。
+准备好安装 Astro 了吗？按照本指南开始使用 `create astro` CLI。
+
+:::note[更喜欢手动安装 ASTRO？]
+请阅读我们的[分步手动安装指南](/zh-cn/install/manual/)。
+:::
 
 #### 前提准备
 
@@ -12,147 +16,123 @@ import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.ast
 - **文本编辑器** - 我们建议使用安装有 [Astro 官方扩展](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode)的 [VS Code](https://code.visualstudio.com/)。
 - **终端（Terminal）** - Astro 可以通过其命令行界面 (CLI) 访问。
 
-<InstallGuideTabGroup />
-
 #### 安装
 
-`create-astro` 命令是从零开始一个全新的 Astro 项目最快、最简单的方法。
+`create astro` 是从头开始新 Astro 项目的最快方式。它将引导你完成设置新 Astro 项目的每一步。 它允许你从几个不同的官方入门模板中进行选择，你也可以[传递--template 参数来使用 GitHub 上的任何现有项目](#入门模板)。
 
-## 1. 通过命令行（CLI）运行
+:::tip[在线预览]
+想要在浏览器中试用 Astro？ 访问 [astro.new](https://astro.new/) 浏览我们的入门模板并在不离开浏览器的情况下启动一个新的 Astro 项目。
+:::
 
-在终端内使用 `create-astro` 可以快速的启动安装向导。这将会在你运行该命令的目录下指引你一步步去创建第一个 Astro 项目。
+## 1. 运行安装向导
 
-不需要事先创建新目录！向导将自动为你创建项目文件夹。
-```shell
-# npm
-npm create astro@latest
+在你的终端中运行以下命令以启动我们方便的安装向导：
 
-# yarn
-yarn create astro
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # 使用 npm 创建一个新项目
+  npm create astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # 使用 pnpm 创建一个新项目
+  pnpm create astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # 使用 yarn 创建一个新项目
+  yarn create astro
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
-# pnpm
-pnpm create astro@latest
-```
+你可以在计算机上的任何位置运行 `create astro`，因此在开始之前无需为你的项目创建一个新的空目录。 如果你的新项目还没有空目录，该向导会帮你自动创建一个。
 
-根据你所使用的包管理器不同 ，你可能会收到要你确认安装 `create-astro@latest` 的提示。然后会要求你指定项目文件夹（例如：`./my-astro-site`），它将创建一个新的目录。
-### 选择入门模板
+如果一切顺利的话，在一些建议的后续步骤之后，你应该会看到 “Liftoff confirmed. Explore your project!” 。 `cd` 进入你的新项目目录以开始使用 Astro。
 
-你将看到可供你挑选的简短入门模板列表：
+如果你在 CLI 向导期间跳过了 `npm install` 步骤，请确保在继续之前安装你的依赖项。
+
+## 2. 启动 Astro ✨
+
+Astro 带有一个内置的开发服务器，拥有项目开发所需的一切。 `astro dev` 命令将启动一个本地开发服务器，这样你就可以第一次看到你的新网站正在运行。
+
+每个入门模板都带有一个预配置的脚本，可以为你运行 `astro dev`。 使用你最喜欢的包管理器运行此命令并启动 Astro 开发服务器。
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm run dev
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm run dev
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn run dev
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+
+如果一切顺利，Astro 现在应该可以在 [http://localhost:3000/](http://localhost:3000/) 上为你的项目提供服务了！
+
+Astro 将实时监听 `src/` 目录中的文件更改，因此你在开发过程中进行更改时无需重新启动服务器。
+
+如果你无法在浏览器中打开你的项目，请返回运行 `dev` 命令的终端并查看是否发生错误，或者检查你的项目的服务 URL 是否与​上方​链接的 URL 不同。
+
+## 入门模板
+
+你还可以通过将 `--template` 参数传递给 `create astro` 命令，基于[官方示例](https://github.com/withastro/astro/tree/main/examples)或者任何 GitHub 存储库的`main` 分支来启动一个新的 astro 项目。
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # 使用官方示例创建一个新项目
+  npm create astro@latest -- --template <example-name>
+
+  # 基于某个 GitHub 仓库的 main 分支创建一个新项目
+  npm create astro@latest -- --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # 使用官方示例创建一个新项目
+  pnpm create astro@latest --template <example-name>
   
-- `Just the basics`：对于想要探索 Astro 的人而言，这是个很好的入门模板。
-- `Blog`、`Documentation`、 `Portfolio`：根据具体用例提供参考的模板。
-- `Completely empty`：仅供入门使用的最小模板。
+  # 基于某个 GitHub 仓库的 main 分支创建一个新项目
+  pnpm create astro@latest --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # 使用官方示例创建一个新项目
+  yarn create astro --template <example-name>
+  
+  # 基于某个 GitHub 仓库的 main 分支创建一个新项目
+  yarn create astro --template <github-username>/<github-repo>
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
-使用箭头键（向上和向下）导航到你要安装的模板，然后按回车（Enter）提交。
+默认情况下，此命令将使用模板仓库的`main`分支。要使用不同的分支，请将其作为 `--template` 参数的一部分传递：`<github-username>/<github-repo>#<branch>`。
 
-> 💡 想在选择前先在浏览器中查看一下模板吗？[前往 astro.new](https://astro.new/)
-
-### 安装依赖（可选）
-
-向导将在此时提出运行 `install` 命令的交易，你可以选择现在安装或者等会自行安装。
-
-> ⚠️如果你此时不这样做，那么就需要在向导完成后，在开始运行项目前[安装依赖](#2-安装依赖)。
-
-### 安装任一官方 Astro 集成（可选）
-
-此时你可以选择添加任何[额外的 UI 框架](/zh-cn/core-concepts/framework-components/)（如 React、Svelte、Vue、Solid、Preact、Lit），然后再通过运行 `astro add --yes` 添加其他 Astro 官方集成（如 Tailwind、Partytown、Sitemap）。
-
-要怎么选择想要再项目中使用的 Astro 集成？使用方向键（向上和向下）导航，空格键在选定的状态之间切换。你可以一次选择多个项目，或者你可以不选择任何集成就直接仅进行下一步。
-
-当你对你的选择感到满意时，按回车（Enter）提交。
-
-> 这些集成以及其他的 [Astro 社区集成](https://astro.build/integrations)，在日后也可以按照我们的[集成指南](/zh-cn/guides/integrations-guide/)所写的另行添加。
-
-在选完要添加的集成后，你应该看到类似下方的终端信息，告知你 `create-astro` 将对项目中的 `astro.config.mjs` 进行改变。
-
-```bash
-Astro will make the following changes to your config file:
-```
-
-看到这条消息意味着你所选择的集成已经成功添加到你的项目配置中。(如果没有的话，你可以稍后手动添加它们）。
-
-### 初始化 .git 仓库（可选）
-
-在这最后一步，你可以选择在你的新目录下初始化 git 仓库。你可以随意选择是否要初始化，但如果你打算在项目中使用 [Git](https://git-scm.com/) 工具的话这就大有脾益。
-
-### 下一步
-
-当 `create-astro` 安装向导执行完毕后，你应该在屏幕上看到一些建议性说明（"Next Steps"），这些说明将帮助你完成设置并开始新项目。
-
-
-## 2. 安装依赖
-
-如果你没有跟随向导安装项目依赖，现在你就需要使用喜欢的包管理器来安装依赖。
-
-```bash
-# npm
-npm install
-
-# yarn
-yarn
-
-# pnpm
-pnpm install
-
-```
-
-如果你打算在项目内使用 [Git](https://git-scm.com/)，直接在项目根目录运行 `git init` 即可。
-
-
-## 3. 开始使用 Astro ✨
-
-在大部分项目开发中使用 Astro 的内置开发服务器都可以来完成开发。这将演示怎样在本地开发环境中运行你的项目。
-
-首先，使用包管理器运行预置的启动脚本：
-
-```bash
-# npm
-npm start
-
-# yarn
-yarn start
-
-# pnpm
-pnpm run start
-```
-
-如果一切都正常，Astro 将会在 [http://localhost:3000](http://localhost:3000) 运行你的项目！
-
-
-Astro 将实时监听 `src/` 目录下的文件更改，所以在开发过程中，如果你做了修改，不需去重启服务。
-
-
-如果你无法在浏览器中正常打开你的项目，返回运行 `start` 命令的终端内看看有没有什么错误提示。
-
-
-## 4. 部署到网络
-
-是时候去部署你的项目到互联网了！在你的项目内运行 `build` 命令就可以在项目的 `dist/` 目录内生成部署所需的所有静态文件。
-
-
-```bash
-# npm
-npm run build
-
-# yarn
-yarn build
-
-# pnpm
-pnpm run build
-```
-
-当命令运行结束，在项目目录内你可以看到名为 `dist/` 的新目录，现在你可以直接把它部署到你喜欢的网络服务器上了。
-
-想开始免费托管你的网页，可以考虑下我们的骄傲的托管合作伙伴，例如 [Netlify](https://www.netlify.com/)。获取更多的部署说明，请查阅我们的[部署文档](/zh-cn/guides/deploy/)。
+探索我们的[主题和入门展示](https://astro.build/themes/)，你可以在其中浏览博客、个人作品集、文档、落地页等主题！ 或者，[在 GitHub 上搜索](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories)更多入门项目。
 
 
 ## 接下来...
 
-好了！你现在已经准备好开始进行开发了！
+好了！你现在可以开始使用 Astro 进行构建了！ 🥳
 
-📚到[项目结构](/zh-cn/core-concepts/project-structure/)章节学习更多关于 Astro 的项目结构的内容。
+以下是我们建议接下来探索的几个主题。 你可以按任何顺序阅读它们。 你甚至可以暂时离开我们的文档，然后去玩你的新 Astro 项目代码库，遇到麻烦或有疑问时返回这里。
 
-📚到[组件](/zh-cn/core-concepts/astro-components/)章节学习关于 Astro 组件语法的内容。
+📚 **添加框架**：在我们的[集成指南](/zh-cn/guides/integrations-guide/)中学习如何使用 `npx astro add` 扩展 Astro 以支持 React、Svelte、Tailwind 等。
 
-📚 到[页面](/zh-cn/core-concepts/astro-pages/)章节学习关于 Astro 基于文件的路由的相关知识。
+📚 **部署你的网站**：在我们的[部署指南](/zh-cn/guides/deploy/)中了解如何构建 Astro 项目并将其部署到网络。
 
+📚 **了解你的代码库**：在我们的[项目结构指南](/zh-cn/core-concepts/project-structure/)中了解更多关于 Astro 项目结构的信息。
