--- a/src/content/docs/zh-cn/install/manual.mdx
+++ b/src/content/docs/zh-cn/install/manual.mdx
@@ -2,9 +2,15 @@
 title: 手动安装 Astro
 description: 如何通过 NPM、PNPM 或 Yarn 来手动安装 Astro。
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
+import Button from '~/components/Button.astro'
+import FileTree from '~/components/FileTree.astro';
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-准备好安装 Astro 了？跟着我们的自动化或手动设置教程来开始吧。
+如果你不想使用[自动化 CLI 工具](/zh-cn/install/auto/)，本指南将引导你完成手动安装和配置新 Astro 项目的步骤。
+
+#### 喜欢更快的入门方式？
+
+<Button href="/zh-cn/install/auto/">尝试 create astro CLI 向导 →</Button>
 
 #### 前提准备
 
@@ -12,15 +18,13 @@ import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.ast
 - **文本编辑器** - 我们建议使用安装有 [Astro 官方扩展](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode)的 [VS Code](https://code.visualstudio.com/)。
 - **终端（Terminal）** - Astro 可以通过其命令行界面 (CLI) 访问。
 
-<InstallGuideTabGroup />
-
 #### 安装
 
-如果你不打算使用 `create-astro` 命令工具来自动化创建项目，你可以根据以下说明来自行设置你的项目。
+如果你不打算使用 `create astro` 命令工具来自动化创建项目，你可以根据以下说明来自行设置你的项目。
 
 ## 1. 创建项目目录
 
-创建一个目录，目录名称是你打算使用的项目名称，并导航到该目录。
+创建一个空目录，目录名称是你打算使用的项目名称，并导航到该目录。
 
 ```bash
 mkdir my-astro-project
@@ -29,27 +33,55 @@ cd my-astro-project
 
 在该目录内，创建 `package.json` 文件，该文件将管理你的项目依赖，包括 Astro，如果你不熟悉这种文件格式，可以运行下面的命令来直接创建一个。
 
-```bash
-npm init --yes
-```
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm init --yes
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm init 
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn init --yes
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
 ## 2. 安装 Astro
 
 首先，需要在你的项目目录内安装 Astro 的项目依赖。
 
-```bash
-npm install astro
-```
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install astro
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install astro 
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add astro
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
 然后，使用下面的代码来替换 `package.json` 文件的 `scripts` 部分内容：
 
-```diff
-  "scripts": \{
--    "test": "echo \"Error: no test specified\" && exit 1"
-+    "dev": "astro dev",
-+    "start": "astro dev",
-+    "build": "astro build",
-+    "preview": "astro preview"
+```json title="package.json" del={2} ins={3-6}
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
 ```
 
@@ -89,7 +121,7 @@ console.log('它运行在终端而非浏览器！');
 
 针对该教程，复制并粘贴以下内容至 `robots.txt` 内：
 
-```
+```diff title="public/robots.txt"
 # 示例：运行所有爬虫抓取并索引你的站点。
 # 全部语法：https://developers.google.com/search/docs/advanced/robots/create-robots-txt
 User-agent: *
@@ -98,11 +130,11 @@ Allow: /
 
 ## 5. 创建 `astro.config.mjs` 配置文件
 
-Astro 使用 `astro.config.mjs` 来配置项目。这个文件是可选的，您可以选择不配置它，但还是希望你现在创建该文件。
+Astro 使用 `astro.config.mjs` 来配置项目。这个文件是可选的，你可以选择不配置它，但还是希望你现在创建该文件。
 
 在你的项目根目录创建 `astro.config.mjs` 文件，并复制粘贴下面的内容至该文件内：
 
-```
+```js title="astro.config.mjs"
 import { defineConfig } from 'astro/config';
 
 // https://astro.build/config
@@ -112,26 +144,49 @@ export default defineConfig({});
 如果你想集成像 React、Svelte 这样的[UI 框架组件](/zh-cn/core-concepts/framework-components/)或是使用其他类似 Tailwind 或 Partytown 这样的工具，你可以在[手动导入并配置集成](/zh-cn/guides/integrations-guide/)章节内获取更多信息。
 
 
-📚 阅读Astro的[API配置引用](/zh-cn/reference/configuration-reference/)章节可以获得更多内容。
+📚 阅 读Astro 的[API配置参考](/zh-cn/reference/configuration-reference/)章节可以获得更多内容。
 
+## 6. 添加 TypeScript 支持
 
-## 6. 接下来
+TypeScript 使用`tsconfig.json`进行配置。即使你不编写 TypeScript 代码，这个文件也很重要，因为 Astro 和 VS Code 等工具知道如何理解你的项目。 如果没有 `tsconfig.json` 文件，编辑器将不完全支持某些功能（如 npm 包导入）。
+
+如果你打算编写 TypeScript 代码，建议使用 Astro 的`strict`或`strictest`的模板。 你可以在 [astro/tsconfigs/](https://github.com/withastro/astro/blob/main/packages/astro/tsconfigs/) 查看和比较三个模板配置。
+
+在项目的根目录创建 `tsconfig.json`，并将下面的代码复制到其中。（你可以为 TypeScript 模板使用 `base`、`strict` 或 `strictest`）：
+
+```json title="tsconfig.json" "base"
+{
+  "extends": "astro/tsconfigs/base",
+}
+```
+
+最后，创建`src/env.d.ts`让 TypeScript 知道 Astro 项目中可用的环境类型：
+
+```ts title="src/env.d.ts"
+/// <reference types="astro/client" />
+```
+
+📚 阅读 Astro 的 [TypeScript 设置指南](/zh-cn/guides/typescript/#设置)以获取更多信息。
+
+## 7. 接下来
 
 如果你按上述一步步操作，你的项目目录应该看上去像是这样：
 
-```
-├── node_modules/
-├── src/
-│   └── pages/
-│   │   └── index.astro
-├── public/
-│   ├── robots.txt
-├── astro.config.mjs
-├── package.json
-└── package-lock.json (or: yarn.lock, pnpm-lock.yaml, etc.)
-```
+<FileTree>
+- node_modules/
+- public/
+  - robots.txt
+- src/
+  - pages/
+    - index.astro
+  - env.d.ts
+- astro.config.mjs
+- package-lock.json 或者 `yarn.lock`，`pnpm-lock.yaml`，等等。
+- package.json
+- tsconfig.json
+</FileTree>
 
 祝贺你，你现在可以使用 Astro 了！
 
-如果你完成了这个指南的全部内容，你可以跳转至[步骤 3：开始](/zh-cn/install/auto/#3-开始使用-astro-)继续并学习首次该怎样运行 Astro.
+如果你完成了这个指南的全部内容，你可以跳转至[步骤 2：启动 Astro](/zh-cn/install/auto/#2-启动-astro-)继续并学习如何首次运行 Astro。
 
