fix JavaScript spelling while we're here!
Co-authored-by: 李瑞丰 <liruifeng1024@gmail.com>

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -24,7 +24,7 @@ Playwright is an end-to-end testing framework for modern web apps. Use the Playw
 
 You can get started and run your tests using the [VS Code Extension](https://playwright.dev/docs/getting-started-vscode).
 
-Alternatively, you can install Playwright within your Astro project using the package manager of your choice. Follow the CLI steps to choose Javascript/TypeScript, name your test folder, and add an optional Github Actions workflow.
+Alternatively, you can install Playwright within your Astro project using the package manager of your choice. Follow the CLI steps to choose JavaScript/TypeScript, name your test folder, and add an optional Github Actions workflow.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
