--- a/src/content/docs/zh-cn/reference/cli-reference.mdx
+++ b/src/content/docs/zh-cn/reference/cli-reference.mdx
@@ -175,7 +175,7 @@ astro --root myRootFolder/myProjectFolder dev
 astro --config config/astro.config.mjs dev
 ```
 
-### `--site`
+### `--site  <url>`
 
 为您的项目配置[`site`值](/zh-cn/reference/configuration-reference/#base)。 传递此标志将覆盖 `astro.config.mjs` 文件中的`site`值（如果存在）。
 
