--- a/src/content/docs/zh-cn/reference/cli-reference.mdx
+++ b/src/content/docs/zh-cn/reference/cli-reference.mdx
@@ -179,7 +179,7 @@ astro --config config/astro.config.mjs dev
 
 为您的项目配置[`site`值](/zh-cn/reference/configuration-reference/#base)。 传递此标志将覆盖 `astro.config.mjs` 文件中的`site`值（如果存在）。
 
-### `--base`
+### `--base <pathname>`
 
 <Since v="1.4.1" />
 
