Remove "private pages" in Excluding Pages (#2685)
* "temporarily disable pages"

* revise sentences

---------

Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/core-concepts/routing.mdx
+++ b/src/content/docs/en/core-concepts/routing.mdx
@@ -374,9 +374,9 @@ const params = Astro.params;
 
 ## Excluding pages
 
-You can exclude pages, or even whole directories from being built by prefixing their names with an underscore (`_`).
+You can exclude pages or directories from being built by prefixing their names with an underscore (`_`). Files with the `_` prefix won't be recognized by the router and won't be placed into the `dist/` directory.
 
-This allows you to create private pages, and also to co-locate tests, utilities, and components with their related pages, preventing them from being built into `.html` files and placed into the `dist/` directory.
+You can use this to temporarily disable pages, and also to put tests, utilities, and components in the same folder as their related pages. 
 
 In this example, only `src/pages/index.astro` and `src/pages/posts/post1.md` will be built as page routes and HTML files.
 
