--- a/src/content/docs/en/recipes/index.mdx
+++ b/src/content/docs/en/recipes/index.mdx
@@ -20,15 +20,15 @@ See guided examples of adding features to your Astro project.
 </RecipeBox>
 
 <RecipeBox icon="puzzle-piece">
-  <a href="/en/guides/recipes/nanostores/">Build an eCommerce cart flyout with nanostores</a>
+  <a href="/en/recipes/nanostores">Build an eCommerce cart flyout with nanostores</a>
 </RecipeBox>
 
 <RecipeBox icon="puzzle-piece">
-  <a href="/en/guides/recipes/captcha/">Verify a Captcha</a>
+  <a href="/en/recipes/captcha/">Verify a Captcha</a>
 </RecipeBox>
 
 <RecipeBox icon="puzzle-piece">
-  <a href="/en/guides/recipes/add-yaml-support/">Add support for importing YAML</a>
+  <a href="/en/recipes/add-yaml-support/">Add support for importing YAML</a>
 </RecipeBox>
 
 <BackToRecipes />
