all recipes -> more recipes

--- a/src/content/docs/en/recipes/index.mdx
+++ b/src/content/docs/en/recipes/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: All Recipes
+title: More Recipes
 description: See guided examples of building features in Astro.
 i18nReady: false
 ---
