Use PackageManagerTabs for package.json scripts

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -41,16 +41,32 @@ To get started, you'll need an existing Astro project.
  
 2. Change  the `dev` script in `package.json`:
 
-    ```json
-    // package.json
-    ...
-    "scripts": {
-        "dev": "pnpm tinacms dev -c 'astro dev'"
-    }
-    ...
-    ```
-
-    Make sure to replace "pnpm" in the above line with the name of the package manager you're using.
+    <PackageManagerTabs>
+      <Fragment slot="npm">
+      ```json
+      // package.json
+      "scripts": {
+          "dev": "npm tinacms dev -c 'astro dev'"
+      }
+      ```
+      </Fragment>
+      <Fragment slot="pnpm">
+      ```json
+      // package.json
+      "scripts": {
+          "dev": "pnpm tinacms dev -c 'astro dev'"
+      }
+      ```
+      </Fragment>
+      <Fragment slot="yarn">
+      ```json
+      // package.json
+      "scripts": {
+          "dev": "yarn tinacms dev -c 'astro dev'"
+      }
+      ```
+      </Fragment>
+    </PackageManagerTabs>
 
 3. TinaCMS is now set up in local mode. Test this by running the dev server, then navigating to `/admin/index.html#/collections/post`.
 Editing the _Hello, World!_ post will update the `content/posts/hello-world.md` file in your project directory.
