Style and language tweaks

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -33,17 +33,17 @@ To get started, you'll need an existing Astro project.
       </Fragment>
     </PackageManagerTabs>
 
-    - When prompted for a Cloud ID, press enter-you'll generate one later if you want to use Tina Cloud.
+    - When prompted for a Cloud ID, press <kbd>Enter</kbd> to skip. You'll generate one later if you want to use Tina Cloud.
     - When prompted "What framework are you using", choose **Other**.
-    - When asked where public assets are stored, press enter.
+    - When asked where public assets are stored, press <kbd>Enter</kbd>.
 
-    After this has finished, you should now have a `.tina` folder in the root of your project and an `admin` folder in your public directory. It will also create a markdown file at `content/posts/hello-world.md`.
+    After this has finished, you should now have a `.tina` folder in the root of your project and an `admin` folder in your public directory. It will also create a Markdown file at `content/posts/hello-world.md`.
  
 2. Change  the `dev` script in `package.json`:
 
     <PackageManagerTabs>
       <Fragment slot="npm">
-      ```json
+      ```json ins={3}
       // package.json
       "scripts": {
           "dev": "npm tinacms dev -c 'astro dev'"
@@ -51,7 +51,7 @@ To get started, you'll need an existing Astro project.
       ```
       </Fragment>
       <Fragment slot="pnpm">
-      ```json
+      ```json ins={3}
       // package.json
       "scripts": {
           "dev": "pnpm tinacms dev -c 'astro dev'"
@@ -59,7 +59,7 @@ To get started, you'll need an existing Astro project.
       ```
       </Fragment>
       <Fragment slot="yarn">
-      ```json
+      ```json ins={3}
       // package.json
       "scripts": {
           "dev": "yarn tinacms dev -c 'astro dev'"
@@ -68,10 +68,13 @@ To get started, you'll need an existing Astro project.
       </Fragment>
     </PackageManagerTabs>
 
-3. TinaCMS is now set up in local mode. Test this by running the dev server, then navigating to `/admin/index.html#/collections/post`.
-Editing the _Hello, World!_ post will update the `content/posts/hello-world.md` file in your project directory.
+3. TinaCMS is now set up in local mode. Test this by running the `dev` script, then navigating to `/admin/index.html#/collections/post`.
 
-4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`. For example, you can add a required "date posted" frontmatter property to our posts:
+    Editing the “Hello, World!” post will update the `content/posts/hello-world.md` file in your project directory.
+
+4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`.
+
+    For example, you can add a required "date posted" frontmatter property to our posts:
 
     ```js title=".tina/config.ts" ins={35-40}
     import { defineConfig } from "tinacms";
@@ -129,5 +132,5 @@ Editing the _Hello, World!_ post will update the `content/posts/hello-world.md` 
 
     Learn more about collections [in the Tina docs](https://tina.io/docs/reference/collections/).
 
-5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). Continue in [the Tina Docs](https://tina.io/docs/tina-cloud/).
+5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). You can read how to do this in [the Tina Cloud documentation](https://tina.io/docs/tina-cloud/).
 
