fix: review recommendations

--- a/src/content/docs/de/guides/imports.mdx
+++ b/src/content/docs/de/guides/imports.mdx
@@ -1,10 +1,10 @@
 ---
-title: Statische Inhalte
-description: Erfahre, wie du verschiedene Inhalte in Astro importierst.
+title: Importe
+description: Erfahre, wie du verschiedene Dateitypen in Astro importierst.
 i18nReady: true
 ---
 
-Astro unterstützt die meisten statischen Elemente, ohne dass eine Konfiguration erforderlich ist. Du kannst die Anweisung `import` an beliebiger Stelle in deinem Projekt-JavaScript verwenden (einschließlich Astro-Frontmatter) und Astro wird eine optimierte Kopie dieses statischen Assets in deinem endgültigen Build einfügen. `@import` wird auch innerhalb von CSS & `<style>` Tags unterstützt.
+Astro unterstützt die meisten statischen Elemente, ohne dass eine Konfiguration erforderlich ist. Du kannst die Anweisung `import` an beliebiger Stelle in deinem Projekt-JavaScript verwenden (einschließlich Astro-Frontmatter) und Astro wird eine optimierte Kopie dieses statischen Elements in deinem endgültigen Build einfügen. `@import` wird auch innerhalb von CSS & `<style>` Tags unterstützt.
 
 ## Unterstützte Dateitypen
 
@@ -147,7 +147,7 @@ Das Hinzufügen von **Alt-Text** zu `<img>`-Tags wird aus Gründen der Zugängli
 
 Mit [`Astro.glob()`](/de/reference/api-reference/#astroglob) kannst du viele Dateien auf einmal importieren.
 
-`Astro.glob()` erlaubt nur einen Parameter: ein relatives [glob pattern](/de/guides/imports/#glob-patterns), das zu den lokalen Dateien passt, die du importieren möchtest. Es ist asynchron und gibt ein Array mit den Exporten jeder passenden Datei zurück.
+`Astro.glob()` erlaubt nur einen Parameter: ein relatives [Glob-Pattern](/de/guides/imports/#glob-patterns), das zu den lokalen Dateien passt, die du importieren möchtest. Es ist asynchron und gibt ein Array mit den Exporten jeder passenden Datei zurück.
 
 ```astro title="src/components/my-component.astro"
 ---
@@ -183,20 +183,20 @@ const components = await Astro.glob('../components/*.astro');
 
 ### Glob Patterns
 
-Ein glob pattern ist ein Dateipfad, der spezielle Platzhalterzeichen unterstützt. Es wird verwendet, um auf mehrere Dateien in deinem Projekt gleichzeitig zu verweisen.
+Ein Glob-Pattern ist ein Dateipfad, der spezielle Platzhalterzeichen unterstützt. Es wird verwendet, um auf mehrere Dateien in deinem Projekt gleichzeitig zu verweisen.
 
-Das glob pattern `./pages/**/*.{md,mdx}` beginnt beispielsweise im Unterverzeichnis `pages`, durchsucht alle Unterverzeichnisse (`/**`) und erfasst jeden Dateinamen (`/*`), der entweder auf `.md` oder `.mdx` (`.{md,mdx}`) endet.
+Das Glob-Pattern `./pages/**/*.{md,mdx}` beginnt beispielsweise im Unterverzeichnis `pages`, durchsucht alle Unterverzeichnisse (`/**`) und erfasst jeden Dateinamen (`/*`), der entweder auf `.md` oder `.mdx` (`.{md,mdx}`) endet.
 
-#### Glob Patterns in Astro
+#### Glob-Patterns in Astro
 
-Um mit `Astro.glob()` verwendet zu werden, muss das glob pattern ein String-Literal sein und darf keine Variablen enthalten. Siehe [die Anleitung zur Fehlerbehebung](/de/guides/troubleshooting/#astroglob---no-matches-found) für eine andere Lösung.
+Um mit `Astro.glob()` verwendet zu werden, muss das Glob-Pattern ein String-Literal sein und darf keine Variablen enthalten. Siehe [die Anleitung zur Fehlerbehebung](/de/guides/troubleshooting/#astroglob---no-matches-found) für eine andere Lösung.
 
-Außerdem müssen glob pattern mit einem der folgenden Zeichen beginnen:
+Außerdem müssen Glob-Pattern mit einem der folgenden Zeichen beginnen:
 - `./` (um im aktuellen Verzeichnis zu beginnen)
 - `../` (um im übergeordneten Verzeichnis zu beginnen)
 - `/` (um im Stammverzeichnis des Projekts zu beginnen)
  
-[Lies mehr über die Syntax des glob pattern](https://github.com/mrmlnc/fast-glob#pattern-syntax).
+[Lies mehr über die Syntax des Glob-Pattern](https://github.com/mrmlnc/fast-glob#pattern-syntax).
 
 ## WASM
 
