--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -2,7 +2,7 @@
 title: Tina CMS & Astro
 description: Add content to your Astro project using Tina as a CMS
 type: cms
-stub: true
+stub: false
 service: Tina CMS
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
