edit package.json examples

--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -43,26 +43,35 @@ To get started, you'll need an existing Astro project.
 
     <PackageManagerTabs>
       <Fragment slot="npm">
-      ```json ins={3}
+      ```json del={4} ins={5}
       // package.json
-      "scripts": {
-          "dev": "npm tinacms dev -c 'astro dev'"
+      {
+          "scripts": {
+              "dev": "astro dev",
+              "dev": "npm tinacms dev -c 'astro dev'"
+          }
       }
       ```
       </Fragment>
       <Fragment slot="pnpm">
-      ```json ins={3}
+      ```json del={4} ins={5}
       // package.json
-      "scripts": {
-          "dev": "pnpm tinacms dev -c 'astro dev'"
+      {
+          "scripts": {
+              "dev": "astro dev",
+              "dev": "pnpm tinacms dev -c 'astro dev'"
+          }
       }
       ```
       </Fragment>
       <Fragment slot="yarn">
-      ```json ins={3}
+      ```json del={4} ins={5}
       // package.json
-      "scripts": {
-          "dev": "yarn tinacms dev -c 'astro dev'"
+      {
+          "scripts": {
+              "dev": "astro dev",
+              "dev": "yarn tinacms dev -c 'astro dev'"
+          }
       }
       ```
       </Fragment>
