--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -81,7 +81,7 @@ To get started, you'll need an existing Astro project.
 
     Editing the “Hello, World!” post will update the `content/posts/hello-world.md` file in your project directory.
 
-4. Set up your collections by editing the `schema.collections` property in `.tina/config.ts`.
+4. Set up your Tina collections by editing the `schema.collections` property in `.tina/config.ts`.
 
     For example, you can add a required "date posted" frontmatter property to our posts:
 
