--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -139,7 +139,7 @@ To get started, you'll need an existing Astro project.
     });
     ```
 
-    Learn more about collections [in the Tina docs](https://tina.io/docs/reference/collections/).
+    Learn more about Tina collections [in the Tina docs](https://tina.io/docs/reference/collections/).
 
 5. In production, TinaCMS can commit changes directly to your GitHub repository. To set up TinaCMS for production, you can choose to use [Tina Cloud](https://app.tina.io/register) or self-host the [Tina Data Layer](https://tina.io/docs/self-hosted/overview/). You can read how to do this in [the Tina Cloud documentation](https://tina.io/docs/tina-cloud/).
 
