update header link

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -184,7 +184,7 @@ Les fichiers `.mdx` doivent être écrit dans la [syntaxe MDX](https://mdxjs.com
 
 ### Utilisation de variables exportées dans MDX
 
-MDX permet d'utiliser l'instruction `export` pour ajouter des variables dans votre contenu MDX. Ces variables sont accessibles à la fois dans le modèle lui-même et comme propriétés nommées lors de [l'importation du fichier](#importing-markdown) à un autre endroit.
+MDX permet d'utiliser l'instruction `export` pour ajouter des variables dans votre contenu MDX. Ces variables sont accessibles à la fois dans le modèle lui-même et comme propriétés nommées lors de [l'importation du fichier](#importer-du-contenu-markdown) à un autre endroit.
 
 Par exemple, vous pouvez exporter un champ `title` depuis une page ou un composant MDX pour l'utiliser en tant qu'en-tête avec les `{expressions JSX}` : 
 
