update header link

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -149,7 +149,7 @@ const {frontmatter} = Astro.props;
 </html>
 ```
 
-📚 En savoir plus à propos des [Layouts Markdown](/fr/core-concepts/layouts/#markdownmdx-layouts).
+📚 En savoir plus à propos des [Layouts Markdown](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
 
 ### Identifiants d'En-tête
 
