update header link

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -117,7 +117,7 @@ Astro fournit des fonctionnalités Markdown supplémentaires et intégrées disp
 
 ### L'avant-propos `layout`
 
-Astro fourni aux pages Markdown et MDX une propriété spéciale `layout` d'avant-propos qui peut spécifier un chemin relatif (ou [alias](/fr/guides/aliases/)) à un [composant layout Astro](/fr/core-concepts/layouts/#markdownmdx-layouts).
+Astro fourni aux pages Markdown et MDX une propriété spéciale `layout` d'avant-propos qui peut spécifier un chemin relatif (ou [alias](/fr/guides/aliases/)) à un [composant layout Astro](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
 
 **`src/pages/posts/post-1.md`**
 
