update header link

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -417,7 +417,7 @@ const posts = await Astro.glob<Frontmatter>('../pages/post/*.md');
 ### Propriétés exportées
 
 :::note[Vous utilisez une mise en page Astro ?]
-Voir les [propriétés exportées vers un composant de mise en page Astro](/fr/core-concepts/layouts/#propriétés-de-mise-en-page-markdown) en utilisant la [mise en page spéciale d'Astro pour le frontmatter](#le-frontmatter-layout).
+Voir les [propriétés exportées vers un composant de mise en page Astro](/fr/core-concepts/layouts/#propriétés-de-mise-en-page-markdown) en utilisant la [mise en page spéciale d'Astro pour le frontmatter](#lavant-propos-layout).
 :::
 
 ## Composant Markdown
