Fix CSS spacing typo

--- a/src/content/docs/en/tutorial/6-islands/2.mdx
+++ b/src/content/docs/en/tutorial/6-islands/2.mdx
@@ -81,7 +81,7 @@ Choose some alternate colors to use in dark mode.
       color: #fff;
     }
 
-    .dark .nav-links a {
+    .dark .nav-links a {d
       color: #fff;
     }
     ```
