--- a/src/content/docs/en/tutorial/6-islands/2.mdx
+++ b/src/content/docs/en/tutorial/6-islands/2.mdx
@@ -76,12 +76,12 @@ Choose some alternate colors to use in dark mode.
 1. In `global.css`, define some dark styles. You can choose your own, or copy and paste:
 
     ```css title="src/styles/global.css"
-    html .dark {
+    html.dark {
       background-color: #0d0950;
       color: #fff;
     }
 
-    .dark .nav-links a {d
+    .dark .nav-links a {
       color: #fff;
     }
     ```
