kill nanostores, replace with orig sharing state

--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -16,7 +16,7 @@ See guided examples of adding features to your Astro project.
 </RecipeBox>
 
 <RecipeBox icon="puzzle-piece">
-  <a href="/en/recipes/nanostores">Build an eCommerce cart flyout with nanostores</a>
+  <a href="/en/core-concepts/sharing-state/">Share state across components with nanostores</a>
 </RecipeBox>
 
 <RecipeBox icon="puzzle-piece">
