Feat: updating the translation up to line 182

--- a/src/content/docs/fr/guides/markdown-content.mdx
+++ b/src/content/docs/fr/guides/markdown-content.mdx
@@ -60,9 +60,9 @@ Ce n'est probablement pas suffisamment stylisé, mais le Markdown supporte :
 
 ### Pages Brouillons
 
-`draft: true` est une valeur optionnelle dans le frontmatter Markdown qui indique qu'une page ou un article Markdown ou MDX est "non publié". Par défaut, cette page sera :
-- exclus du site construit (**aucune page ne sera build**)
-- retourné par [`Astro.glob()`](/fr/reference/api-reference/#astroglob) (**visibles dans les listes d'article**)
+`draft: true` est une valeur optionnelle dans le frontmatter qui marquera une page ou un post Markdown ou MDX individuel comme "non publié". Par défaut, cette page sera :
+- exclue du site construit (**aucune page ne sera build**)
+- retournée par [`Astro.glob()`](/fr/reference/api-reference/#astroglob) (**visible dans les listes d'articles**)
 
 ```markdown {5}
 ---
@@ -78,7 +78,7 @@ Cette page ne sera pas construite pour cet article.
 
 Pour construire et publier cet article :
 
-- mettez à jour l'en-tête Markdown en `draft: false`
+- mettez à jour le frontmatter Markdown en `draft: false`
 - ou supprimez complètement la propriété `draft`.
 
 Mais, cette page _sera_ renvoyée par toute requête `Astro.glob()` correspondante.
@@ -93,10 +93,11 @@ const nonDraftPosts = posts.filter((post) => !post.frontmatter.draft);
 
 #### Activer la compilation des pages brouillons
 
-Pour activer la compilation des pages brouillons par défaut, modifiez `astro.config.mjs` en ajoutant ` drafts: true` au `markdown` ou à l'intégration `mdk` :
+Pour activer la compilation des pages brouillons par défaut, modifiez `astro.config.mjs` en ajoutant `drafts: true` au `markdown` ou à l'intégration `mdx` :
 
-```js ins={4, 7}
-// astro.config.mjs
+```js title="astro.config.mjs" ins={5, 8}
+import { defineConfig } from 'astro/config';
+
 export default defineConfig({
   markdown: {
     drafts: true,
@@ -108,30 +109,30 @@ export default defineConfig({
 ```
 
 :::tip
-Vous pouvez aussi passer le flag `--drafts` lors de l'exécution de `astro build` pour construire les Pages brouillons !
+Vous pouvez aussi passer le flag `--drafts` lors de l'exécution de `astro build` pour compiler les pages brouillons !
 :::
 
 ## Fonctionnalités de Markdown
 
-Astro fournit des fonctionnalités Markdown supplémentaires et intégrées disponibles lors de l'utilisation de fichiers Markdown et MDX.
+Astro fournit des fonctionnalités intégrées Markdown supplémentaires, disponibles lors de l'utilisation de fichiers Markdown et MDX.
 
-### L'avant-propos `layout`
+### Frontmatter `layout`
 
-Astro fourni aux pages Markdown et MDX une propriété spéciale `layout` d'avant-propos qui peut spécifier un chemin relatif (ou [alias](/fr/guides/aliases/)) à un [composant layout Astro](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
+Astro fournit aux pages Markdown et MDX une propriété spéciale `layout` pour le frontmatter, qui permet de spécifier un chemin relatif (ou [alias](/fr/guides/aliases/) à un [composant de mise en page Astro](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
 
 **`src/pages/posts/post-1.md`**
 
 ```markdown {2}
 ---
 layout: ../../layouts/BlogPostLayout.astro
-title: Astro en bref
+title: Astro en résumé
 author: Himanshu
 description: Découvrez ce qui rend Astro génial !
 --- 
-Cet article est écrit en Markdown.
+Ceci est un billet écrit en Markdown.
 ```
 
-Les propriétés de l'avant-propos sont disponibles pour la mise-en-page via `Astro.props` :
+[Des propriétés spécifiques sont alors disponibles pour le composant de mise en page](/fr/core-concepts/layouts/#propriétés-de-mise-en-page-markdown) via `Astro.props`. Par exemple, vous pouvez accéder aux propriétés de frontmatter par `Astro.props.frontmatter` :
 
 **`src/layouts/BlogPostLayout.astro`**
 
@@ -142,12 +143,15 @@ const {frontmatter} = Astro.props;
 <html>
   <!-- ... -->
   <h1>{frontmatter.title}</h1>
-  <h2>Auteur de l'article : {frontmatter.author}</h2>
-  <p>{frontmatter.description}<p>
+  <h2>Auteur du billet : {frontmatter.author}</h2>
+  <p>{frontmatter.description}</p>
   <slot /> <!-- Le contenu Markdown est injecté ici -->
    <!-- ... -->
 </html>
 ```
+
+
+Vous pouvez également [donner du style à votre Markdown](/fr/guides/styling/#markdown-styling) dans votre composant de mise en page.
 
 📚 En savoir plus à propos des [Layouts Markdown](/fr/core-concepts/layouts/#mises-en-page-markdownmdx).
 
